[package]
name = "nft_mint"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_mint"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
# anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# anchor-spl = { version = "0.29.0", features = ["metadata"] }
# mpl-token-metadata = "3.2.3"
# anchor-lang = "0.29.0"
# anchor-spl = "0.29.0"
# mpl-token-metadata = "3.2.3"
